--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,3 +6,137 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+/* header-content */
+.header-content {
+  max-width: 100%;
+  margin: 0px auto;
+  background-color: rgb(255, 244, 230);
+
+  & .navbar {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    align-items: center;
+
+    & .brand {
+      color: rgb(19, 19, 19);
+      font-size: 2rem;
+      font-weight: 700;
+      line-height: 53px;
+    }
+
+    & .nav-links {
+      display: flex;
+      list-style: none;
+
+      & li {
+        margin-right: 40px;
+
+        & a {
+          text-decoration: none;
+          color: rgb(66, 66, 66);
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 26px;
+        }
+      }
+    }
+  }
+
+  /* banner */
+  & .banner {
+    width: 1340px;
+    margin: 0px auto;
+
+    & .banner-content {
+      text-align: center;
+      & h3 {
+        color: rgb(19, 19, 19);
+        font-size: 4rem;
+        font-weight: 700;
+        line-height: 75px;
+        margin-bottom: 50px;
+        margin-top: 7rem;
+      }
+      & p {
+        color: rgb(114, 114, 114);
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 26px;
+        width: 850px;
+        margin: 0px auto;
+      }
+      & button {
+        width: 180px;
+        height: 64px;
+        border-radius: 8px;
+        background: rgb(255, 144, 14);
+        color: rgb(255, 255, 255);
+        font-size: 1.5rem;
+        font-weight: 600;
+        line-height: 23px;
+        margin-top: 1.7rem;
+        border: none;
+        outline: none;
+        margin-bottom: 40px;
+      }
+    }
+    & img {
+      width: 100%;
+    }
+  }
+}
+
+/* Reponsive website */
+@media screen and (max-width: 576px) {
+  .header-content {
+    width: 100%;
+
+    & .navbar {
+      flex-direction: column;
+      padding: 1rem;
+
+      & .nav-links {
+        & li {
+          padding: 20px;
+          margin: 0px auto;
+        }
+      }
+    }
+
+    /* banner */
+    & .banner {
+      width: 100%;
+
+      & .banner-content {
+        text-align: center;
+        & h3 {
+          font-size: 2rem;
+          font-weight: 700;
+          line-height: 55px;
+          margin-bottom: 30px;
+          margin-top: 2rem;
+        }
+        & p {
+          color: rgb(114, 114, 114);
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 26px;
+          width: 80%;
+          margin: 0px auto;
+        }
+        & button {
+          margin-bottom: 2rem;
+        }
+      }
+      & img {
+        padding: 30px;
+      }
+    }
+  }
+}
